RESOLVED FIXED300612
Unreviewed, drop IsDeprecatedWeakRefSmartPointerException for ContentFilterClient
https://bugs.webkit.org/show_bug.cgi?id=300612
Summary Unreviewed, drop IsDeprecatedWeakRefSmartPointerException for ContentFilterCl...
Chris Dumez
Reported 2025-10-12 23:43:35 PDT
Drop IsDeprecatedWeakRefSmartPointerException for ContentFilterClient as it is no longer needed.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-12 23:43:44 PDT
Chris Dumez
Comment 2 2025-10-12 23:46:04 PDT
EWS
Comment 3 2025-10-13 00:23:11 PDT
Committed 301394@main (e543ababeba0): <https://commits.webkit.org/301394@main> Reviewed commits have been landed. Closing PR #52223 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.