Unreviewed, drop IsDeprecatedWeakRefSmartPointerException for ContentFilterClient https://bugs.webkit.org/show_bug.cgi?id=300612 rdar://162504684

It is no longer needed.

* Source/WebCore/loader/ContentFilterClient.h:

Canonical link: https://commits.webkit.org/301394@main